; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_av_common.c_mp_pts_to_av.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_av_common.c_mp_pts_to_av.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MP_NOPTS_VALUE = common dso_local global double 0.000000e+00, align 8
@AV_NOPTS_VALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_pts_to_av(double %0, i32* %1) #0 {
  %3 = alloca double, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store double %0, double* %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @get_def_tb(i32* %6)
  store i32 %7, i32* %5, align 4
  %8 = load double, double* %3, align 8
  %9 = load double, double* @MP_NOPTS_VALUE, align 8
  %10 = fcmp oeq double %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @AV_NOPTS_VALUE, align 4
  br label %19

13:                                               ; preds = %2
  %14 = load double, double* %3, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call double @av_q2d(i32 %15)
  %17 = fdiv double %14, %16
  %18 = call i32 @llrint(double %17)
  br label %19

19:                                               ; preds = %13, %11
  %20 = phi i32 [ %12, %11 ], [ %18, %13 ]
  ret i32 %20
}

declare dso_local i32 @get_def_tb(i32*) #1

declare dso_local i32 @llrint(double) #1

declare dso_local double @av_q2d(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
